<resources>
    <string name="app_name">Technex</string>
    <string name="title_activity_events">Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="branch">
        <item>Computer science</item>
        <item>Mathematics and computing</item>
        <item>Electronics</item>
        <item>Electrical</item>
        <item>Mechanical</item>
        <item>Chemical</item>
        <item>Civil</item>
        <item>Minning</item>
        <item>Metallurgy</item>
        <item>Ceramics</item>
        <item>Biochemical</item>
    </string-array>
    <string-array name="year">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
    </string-array>
    <string name="menu_cops">COPS</string>
    <string name="menu_robotics">Robotics</string>
    <string name="menu_slideshow">Astronomy</string>
    <!--    <string name="menu_aeromodeling">AeromodelLing</string>-->
    <string name="menu_sae">SAE</string>
    <string name="menu_aeromodelling">Aeromodelling</string>
    <string name="menu_share">Share</string>
    <string name="events">EVENTS</string>
    <string name="clubs">CLUBS</string>
    <string name="astronomy">Astronomy</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
