<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cops"
            android:title="@string/menu_cops" />
        <item
            android:id="@+id/nav_robotic"
            android:title="@string/menu_robotics" />
        <item
            android:id="@+id/nav_astronomy"
            android:title="@string/astronomy" />
        <item
            android:id="@+id/nav_sae"
            android:title="@string/menu_sae" />
        <item
            android:id="@+id/nav_aeromodelling"
                    android:title="@string/menu_aeromodelling" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
